--- a/usr/RL/LangeNacht/langenacht.ui
+++ b/usr/RL/LangeNacht/langenacht.ui
@@ -6,39 +6,32 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>678</width>
-    <height>458</height>
+    <width>745</width>
+    <height>569</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>LangeNacht</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="0" rowspan="8" colspan="3">
+   <item row="1" column="0" rowspan="10" colspan="3">
     <widget class="QGraphicsView" name="_wDisplay"/>
    </item>
-   <item row="5" column="3" colspan="2">
+   <item row="5" column="3" colspan="4">
     <widget class="QPushButton" name="_wDeleteAllRewards">
      <property name="text">
       <string>Alle Belohnungen Löschen</string>
      </property>
     </widget>
    </item>
-   <item row="7" column="3">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
+   <item row="11" column="1">
+    <widget class="QSlider" name="_wRandom">
+     <property name="minimumSize">
       <size>
-       <width>20</width>
-       <height>40</height>
+       <width>150</width>
+       <height>0</height>
       </size>
      </property>
-    </spacer>
-   </item>
-   <item row="9" column="1">
-    <widget class="QSlider" name="_wRandom">
      <property name="maximum">
       <number>100</number>
      </property>
@@ -47,7 +40,7 @@
      </property>
     </widget>
    </item>
-   <item row="9" column="2">
+   <item row="11" column="2">
     <widget class="QLineEdit" name="_wRandomValue">
      <property name="maximumSize">
       <size>
@@ -60,22 +53,28 @@
      </property>
     </widget>
    </item>
-   <item row="9" column="0">
+   <item row="11" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
       <string>Zufall in %</string>
      </property>
     </widget>
    </item>
-   <item row="10" column="0">
+   <item row="12" column="0">
     <widget class="QLabel" name="label_2">
      <property name="text">
       <string>Vergessen in %</string>
      </property>
     </widget>
    </item>
-   <item row="10" column="1">
+   <item row="12" column="1">
     <widget class="QSlider" name="_wDiscount">
+     <property name="minimumSize">
+      <size>
+       <width>150</width>
+       <height>0</height>
+      </size>
+     </property>
      <property name="maximum">
       <number>100</number>
      </property>
@@ -87,7 +86,7 @@
      </property>
     </widget>
    </item>
-   <item row="10" column="2">
+   <item row="12" column="2">
     <widget class="QLineEdit" name="_wDiscountValue">
      <property name="maximumSize">
       <size>
@@ -100,14 +99,14 @@
      </property>
     </widget>
    </item>
-   <item row="6" column="3" colspan="2">
+   <item row="6" column="3" colspan="4">
     <widget class="QPushButton" name="_wDeleteAllWalls">
      <property name="text">
       <string>Alle Wände Löschen</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="3" colspan="2">
+   <item row="2" column="3" colspan="4">
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
       <string>Aktionen anzeigen</string>
@@ -136,7 +135,7 @@
      </layout>
     </widget>
    </item>
-   <item row="1" column="3">
+   <item row="1" column="3" colspan="4">
     <widget class="QGroupBox" name="groupBox_2">
      <property name="title">
       <string>Farbwert der Felder</string>
@@ -162,7 +161,7 @@
      </layout>
     </widget>
    </item>
-   <item row="3" column="3">
+   <item row="3" column="3" colspan="4">
     <widget class="QGroupBox" name="groupBox_3">
      <property name="title">
       <string>Value Iteration</string>
@@ -188,7 +187,7 @@
      </layout>
     </widget>
    </item>
-   <item row="4" column="3">
+   <item row="4" column="3" colspan="4">
     <widget class="QGroupBox" name="groupBox_4">
      <property name="title">
       <string>Aktionen wählen</string>
@@ -216,15 +215,21 @@
      </layout>
     </widget>
    </item>
-   <item row="11" column="0">
+   <item row="13" column="0">
     <widget class="QLabel" name="label_3">
      <property name="text">
       <string>Speed (f/s)</string>
      </property>
     </widget>
    </item>
-   <item row="11" column="1">
+   <item row="13" column="1">
     <widget class="QSlider" name="_wSpeed">
+     <property name="minimumSize">
+      <size>
+       <width>150</width>
+       <height>0</height>
+      </size>
+     </property>
      <property name="minimum">
       <number>1</number>
      </property>
@@ -239,7 +244,7 @@
      </property>
     </widget>
    </item>
-   <item row="11" column="2">
+   <item row="13" column="2">
     <widget class="QLineEdit" name="_wSpeedValue">
      <property name="maximumSize">
       <size>
@@ -251,6 +256,78 @@
       <string>30</string>
      </property>
     </widget>
+   </item>
+   <item row="8" column="4">
+    <widget class="QSpinBox" name="_wXSize">
+     <property name="maximumSize">
+      <size>
+       <width>50</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <property name="value">
+      <number>10</number>
+     </property>
+    </widget>
+   </item>
+   <item row="9" column="4">
+    <widget class="QSpinBox" name="_wYSize">
+     <property name="maximumSize">
+      <size>
+       <width>50</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <property name="value">
+      <number>10</number>
+     </property>
+    </widget>
+   </item>
+   <item row="8" column="5" rowspan="2">
+    <widget class="QPushButton" name="_wReset">
+     <property name="text">
+      <string>Reset</string>
+     </property>
+    </widget>
+   </item>
+   <item row="8" column="3">
+    <widget class="QLabel" name="label_4">
+     <property name="maximumSize">
+      <size>
+       <width>17</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>X</string>
+     </property>
+    </widget>
+   </item>
+   <item row="9" column="3">
+    <widget class="QLabel" name="label_5">
+     <property name="maximumSize">
+      <size>
+       <width>17</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>Y</string>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="4">
+    <spacer name="verticalSpacer_2">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
@@ -264,8 +341,8 @@
    <slot>delete_all_rewards()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>437</x>
-     <y>280</y>
+     <x>735</x>
+     <y>302</y>
     </hint>
     <hint type="destinationlabel">
      <x>452</x>
@@ -296,8 +373,8 @@
    <slot>random_changed(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>344</x>
-     <y>391</y>
+     <x>422</x>
+     <y>502</y>
     </hint>
     <hint type="destinationlabel">
      <x>592</x>
@@ -312,8 +389,8 @@
    <slot>discount_changed(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>344</x>
-     <y>418</y>
+     <x>422</x>
+     <y>529</y>
     </hint>
     <hint type="destinationlabel">
      <x>633</x>
@@ -344,7 +421,7 @@
    <slot>show_actions_changed(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>454</x>
+     <x>609</x>
      <y>116</y>
     </hint>
     <hint type="destinationlabel">
@@ -360,12 +437,28 @@
    <slot>speed_changed(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>238</x>
-     <y>431</y>
+     <x>341</x>
+     <y>556</y>
     </hint>
     <hint type="destinationlabel">
      <x>599</x>
      <y>403</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>_wReset</sender>
+   <signal>clicked()</signal>
+   <receiver>LangeNachtClass</receiver>
+   <slot>reset_grid_world()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>633</x>
+     <y>444</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>700</x>
+     <y>426</y>
     </hint>
    </hints>
   </connection>
@@ -385,5 +478,6 @@
   <slot>show_rewards_changed(bool)</slot>
   <slot>show_actions_changed(bool)</slot>
   <slot>speed_changed(int)</slot>
+  <slot>reset_grid_world()</slot>
  </slots>
 </ui>
