--- a/usr/RL/LangeNacht/langenacht.ui
+++ b/usr/RL/LangeNacht/langenacht.ui
@@ -6,25 +6,25 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>745</width>
-    <height>569</height>
+    <width>746</width>
+    <height>603</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>LangeNacht</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="0" rowspan="10" colspan="3">
+   <item row="1" column="0" rowspan="11" colspan="3">
     <widget class="QGraphicsView" name="_wDisplay"/>
    </item>
-   <item row="5" column="3" colspan="4">
+   <item row="6" column="3" colspan="4">
     <widget class="QPushButton" name="_wDeleteAllRewards">
      <property name="text">
       <string>Alle Belohnungen Löschen</string>
      </property>
     </widget>
    </item>
-   <item row="11" column="1">
+   <item row="12" column="1">
     <widget class="QSlider" name="_wRandom">
      <property name="minimumSize">
       <size>
@@ -40,7 +40,7 @@
      </property>
     </widget>
    </item>
-   <item row="11" column="2">
+   <item row="12" column="2">
     <widget class="QLineEdit" name="_wRandomValue">
      <property name="maximumSize">
       <size>
@@ -53,21 +53,21 @@
      </property>
     </widget>
    </item>
-   <item row="11" column="0">
+   <item row="12" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
       <string>Zufall in %</string>
      </property>
     </widget>
    </item>
-   <item row="12" column="0">
+   <item row="13" column="0">
     <widget class="QLabel" name="label_2">
      <property name="text">
       <string>Vergessen in %</string>
      </property>
     </widget>
    </item>
-   <item row="12" column="1">
+   <item row="13" column="1">
     <widget class="QSlider" name="_wDiscount">
      <property name="minimumSize">
       <size>
@@ -86,7 +86,7 @@
      </property>
     </widget>
    </item>
-   <item row="12" column="2">
+   <item row="13" column="2">
     <widget class="QLineEdit" name="_wDiscountValue">
      <property name="maximumSize">
       <size>
@@ -99,7 +99,7 @@
      </property>
     </widget>
    </item>
-   <item row="6" column="3" colspan="4">
+   <item row="7" column="3" colspan="4">
     <widget class="QPushButton" name="_wDeleteAllWalls">
      <property name="text">
       <string>Alle Wände Löschen</string>
@@ -215,14 +215,14 @@
      </layout>
     </widget>
    </item>
-   <item row="13" column="0">
+   <item row="14" column="0">
     <widget class="QLabel" name="label_3">
      <property name="text">
       <string>Speed (f/s)</string>
      </property>
     </widget>
    </item>
-   <item row="13" column="1">
+   <item row="14" column="1">
     <widget class="QSlider" name="_wSpeed">
      <property name="minimumSize">
       <size>
@@ -244,7 +244,7 @@
      </property>
     </widget>
    </item>
-   <item row="13" column="2">
+   <item row="14" column="2">
     <widget class="QLineEdit" name="_wSpeedValue">
      <property name="maximumSize">
       <size>
@@ -257,7 +257,7 @@
      </property>
     </widget>
    </item>
-   <item row="8" column="4">
+   <item row="9" column="4">
     <widget class="QSpinBox" name="_wXSize">
      <property name="maximumSize">
       <size>
@@ -270,7 +270,7 @@
      </property>
     </widget>
    </item>
-   <item row="9" column="4">
+   <item row="10" column="4">
     <widget class="QSpinBox" name="_wYSize">
      <property name="maximumSize">
       <size>
@@ -283,14 +283,14 @@
      </property>
     </widget>
    </item>
-   <item row="8" column="5" rowspan="2">
+   <item row="9" column="5" rowspan="2">
     <widget class="QPushButton" name="_wReset">
      <property name="text">
       <string>Reset</string>
      </property>
     </widget>
    </item>
-   <item row="8" column="3">
+   <item row="9" column="3">
     <widget class="QLabel" name="label_4">
      <property name="maximumSize">
       <size>
@@ -303,7 +303,7 @@
      </property>
     </widget>
    </item>
-   <item row="9" column="3">
+   <item row="10" column="3">
     <widget class="QLabel" name="label_5">
      <property name="maximumSize">
       <size>
@@ -316,7 +316,7 @@
      </property>
     </widget>
    </item>
-   <item row="7" column="4">
+   <item row="8" column="4">
     <spacer name="verticalSpacer_2">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -328,6 +328,32 @@
       </size>
      </property>
     </spacer>
+   </item>
+   <item row="5" column="3" colspan="4">
+    <widget class="QGroupBox" name="groupBox_5">
+     <property name="title">
+      <string>Auto Rewards</string>
+     </property>
+     <layout class="QGridLayout" name="gridLayout_6">
+      <item row="0" column="0">
+       <widget class="QRadioButton" name="radioButton">
+        <property name="text">
+         <string>manuell</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QRadioButton" name="_wAutoRewards">
+        <property name="text">
+         <string>automatisch</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
    </item>
   </layout>
  </widget>
