--- a/usr/RL/LangeNacht/langenacht.ui
+++ b/usr/RL/LangeNacht/langenacht.ui
@@ -367,8 +367,8 @@
    <slot>delete_all_rewards()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>735</x>
-     <y>302</y>
+     <x>736</x>
+     <y>357</y>
     </hint>
     <hint type="destinationlabel">
      <x>452</x>
@@ -383,8 +383,8 @@
    <slot>delete_all_walls()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>597</x>
-     <y>329</y>
+     <x>736</x>
+     <y>388</y>
     </hint>
     <hint type="destinationlabel">
      <x>576</x>
@@ -399,8 +399,8 @@
    <slot>random_changed(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>422</x>
-     <y>502</y>
+     <x>415</x>
+     <y>528</y>
     </hint>
     <hint type="destinationlabel">
      <x>592</x>
@@ -415,8 +415,8 @@
    <slot>discount_changed(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>422</x>
-     <y>529</y>
+     <x>415</x>
+     <y>558</y>
     </hint>
     <hint type="destinationlabel">
      <x>633</x>
@@ -447,8 +447,8 @@
    <slot>show_actions_changed(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>609</x>
-     <y>116</y>
+     <x>604</x>
+     <y>115</y>
     </hint>
     <hint type="destinationlabel">
      <x>675</x>
@@ -463,8 +463,8 @@
    <slot>speed_changed(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>341</x>
-     <y>556</y>
+     <x>415</x>
+     <y>588</y>
     </hint>
     <hint type="destinationlabel">
      <x>599</x>
@@ -479,12 +479,28 @@
    <slot>reset_grid_world()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>633</x>
-     <y>444</y>
+     <x>643</x>
+     <y>482</y>
     </hint>
     <hint type="destinationlabel">
      <x>700</x>
      <y>426</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>_wAutoRewards</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>LangeNachtClass</receiver>
+   <slot>auto_rewards_changed(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>669</x>
+     <y>312</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>698</x>
+     <y>527</y>
     </hint>
    </hints>
   </connection>
@@ -505,5 +521,6 @@
   <slot>show_actions_changed(bool)</slot>
   <slot>speed_changed(int)</slot>
   <slot>reset_grid_world()</slot>
+  <slot>auto_rewards_changed(bool)</slot>
  </slots>
 </ui>
