--- a/usr/RL/TestMaze_II/testmaze_ii.ui
+++ b/usr/RL/TestMaze_II/testmaze_ii.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1183</width>
-    <height>852</height>
+    <width>558</width>
+    <height>535</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -39,8 +39,34 @@
             </property>
            </widget>
           </item>
-          <item row="2" column="0">
+          <item row="2" column="0" rowspan="2">
            <widget class="QLineEdit" name="_wConsoleInput"/>
+          </item>
+          <item row="2" column="1">
+           <widget class="QPushButton" name="_wBackInHistory">
+            <property name="maximumSize">
+             <size>
+              <width>60</width>
+              <height>18</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>&amp;previous</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="1">
+           <widget class="QPushButton" name="_wForwardInHistory">
+            <property name="maximumSize">
+             <size>
+              <width>60</width>
+              <height>18</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>&amp;next</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
@@ -61,8 +87,8 @@
    <slot>process_console_input()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>472</x>
-     <y>509</y>
+     <x>484</x>
+     <y>496</y>
     </hint>
     <hint type="destinationlabel">
      <x>544</x>
@@ -70,8 +96,42 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>_wBackInHistory</sender>
+   <signal>clicked()</signal>
+   <receiver>TestMaze_IIClass</receiver>
+   <slot>back_in_history()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>516</x>
+     <y>473</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>554</x>
+     <y>445</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>_wForwardInHistory</sender>
+   <signal>clicked()</signal>
+   <receiver>TestMaze_IIClass</receiver>
+   <slot>forward_in_history()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>502</x>
+     <y>501</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>541</x>
+     <y>527</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>process_console_input()</slot>
+  <slot>back_in_history()</slot>
+  <slot>forward_in_history()</slot>
  </slots>
 </ui>
